--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^2.3.5",
     "thread-loader": "^2.1.3",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.2",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.8.3",
