--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -86,4 +86,4 @@ rules:
   "react/prop-types": off
   "react-hooks/rules-of-hooks": error
   "react-hooks/exhaustive-deps": warn
-  # "@typescript-eslint/ban-ts-ignore": off
+  "@typescript-eslint/ban-ts-ignore": off
