--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "crypto": "^1.0.1",
     "css-loader": "^3.5.3",
     "es6-promise": "^4.2.8",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -84,7 +84,7 @@
     "lint-staged": "^10.2.2",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
-    "npm-check-updates": "^4.1.2",
+    "npm-check-updates": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.1",
     "postcss-cachebuster": "^0.1.6",
@@ -123,7 +123,7 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^3.0.1",
     "thread-loader": "^2.1.3",
-    "ts-jest": "^25.5.0",
+    "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.3",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.8.3",
@@ -132,7 +132,7 @@
     "webpack": "^4.43.0",
     "webpack-build-notifier": "^2.0.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1"
   },
@@ -167,15 +167,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged --allow-empty"
     }
   },
   "lint-staged": {
-    "!(*.min).{js,ts,jsx,tsx}": [
-      "prettier --write --no-semi --single-quote --trailing-comma none --print-width 160 --jsx-bracket-same-line true",
-      "eslint --fix",
-      "git add"
-    ]
+    "resource/**/!(*.min).{ts,tsx,js}": "eslint　--fix --max-warnings 0",
+    "webpack/*.js": "prettier --write --no-semi --single-quote --trailing-comma none --print-width 160"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -203,7 +200,7 @@
     "setup:spa": "rm webpack/webpack.gulp.** && rm gulpfile.babel.js && rm .csscomb.json && rm resource/.gitkeep && rm -rf .git",
     "dev": "webpack-dev-server --inline --hot --config webpack/webpack.dev.babel.js --mode development",
     "build": "webpack --config webpack/webpack.pro.babel.js --mode production",
-    "test": "jest",
+    "jest": "jest --passWithNoTests",
     "remove-fasters-cache": "rm -rf node_modules/.cache/hard-source/",
     "check-pkg": "ncu",
     "update-pkg": "ncu '/^(?!(styled-components|@add-ignore-modules)).*$/' -u",
